--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./Assets/Css/style.css">
-    <title>Document</title>
+    <title>Car drive</title>
 </head>
 
 <body>
     <div class="container">
         <div class="row">
-            <div id="box">
-GS
-            </div>
+            <div id="box"></div>
+            <i id="icon" class="fa-solid fa-truck"></i>
         </div>
     </div>
+    
+
 </body>
 <script src="./Assets/Js/script.js"></script>
 
